2006-10-17  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/x_multiattrib.c (cellrenderermultilinetext_start_editing):
	Fixed renderer to vertically fill the area when editing data (it
	was only displaying a line with GTK > 2.8). Bug reported by Peter
	Clifton.

2006-10-16 Carlos Nieves Onega <cnieves@iespana.es>

	* src/gschem.c: Call the new page hook for each schematic
	specified in the command line, instead of calling it for
	only the latest.
	This way all pages are zoomed extents when loaded.
	Thanks to Peter Clifton for reporting the bug.

2006-10-13  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/x_compselect.c: Modified to close when Escape is pressed.
	(x_compselect_callback_response): Fixed wrong cast for dialog.
	(COMPSELECT_FILTER_INTERVAL): Added new constant for the timeout
	interval of the filter as suggested by Peter Clifton.
	Fixed and improved code documentation as suggested by Peter
	Clifton.

2006-10-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_window.c: Commited patch by Patrick to greatly reduce the
	flickering/unnecessary redrawing when opening up schematic pages.
	Thanks.

2006-10-04  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/x_compselect.c, include/x_compselect.h: Added a button to 
	clear the filter entry of the component selection dialog.
	Modified to auto-update the component selection as user types in
	filter entry.

	* include/prototype.h, src/x_dialog.c: Deleted old exit_dialog.
	Added new dialog for user confirmation before closing a page or a
	window.

	* src/i_callbacks.c, src/x_fileselect.c: Adapted code to use new
	functions of x_window.c.

	* src/x_window.c: Added new functions to open, close, save and
	change page.

	* src/x_event.c (x_event_configure): Cleaned up.
	Fixed Bug#1527465: fit page zooms when window is maximized.

2006-10-03 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in, src/g_register.c: 
	Changed the name of the new scheme function which adds a component