@@ -327,6 +327,24 @@ void main_prog(void *closure, int argc, char *argv[])
                    w_current->page_current->page_filename);
   }
 
+  /* If no page has been loaded (wasn't specified in the command line. */
+  /* Then run the new page hook and do a zoom extents */
+  if (first_page) {
+    /* Run the new page hook */
+    if (scm_hook_empty_p(new_page_hook) == SCM_BOOL_F &&
+	w_current->page_current != NULL) {
+      scm_run_hook(new_page_hook,
+		   scm_cons(g_make_page_smob(w_current, 
+					     w_current->page_current),
+			    SCM_EOL));
+    }
+    
+    /* Do a zoom extents for this page */
+    a_zoom_extents(w_current,
+		   w_current->page_current->object_head,
+		   A_PAN_DONT_REDRAW);
+  }
+
   o_undo_savestate(w_current, UNDO_ALL);
   
   
